--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,13 +9,13 @@
 
 <ion-content padding>
   <ion-list>
-  <ion-item *ngFor="let item of datos_recuperados" >
+  <ion-item *ngFor="let item of datos_recuperados"  (click)='viewList(item.pin)'>
     <ion-thumbnail item-left>
       <img [src]="item.img">
     </ion-thumbnail>
-    <h2 *ngIf = "item.id == 1">{{item.Title}}</h2>
-    <p>{{item.content}}</p>
-    <button ion-button clear item-right>View</button>
+    <h2>{{item.Title}}</h2>
+    <p>{{item.Content}}</p>
+    <button ion-button clear item-right>Favorite</button>
   </ion-item>
   <!--<ion-item>
     <ion-thumbnail item-left>
