--- a/src/pages/studentLogin/studentLogin.html
+++ b/src/pages/studentLogin/studentLogin.html
@@ -13,8 +13,9 @@
 	  </ion-item>
 
     <ion-item>
-	     <ion-input type="number"  name="number" [(ngModel)]="number" placeholder="Room PIN"></ion-input>
+	     <ion-input type="text"  name="number" [(ngModel)]="pin" placeholder="Room PIN"></ion-input>
 	  </ion-item>
+   
     <div padding>
 	    <button ion-button color="dark" class="submit-btn"  block (click)="roomEnter()">Enter</button>
     </div>
