--- a/src/pages/room/room.html
+++ b/src/pages/room/room.html
@@ -40,12 +40,12 @@
     </ion-item>
 
     </ion-list>-->
-    <ion-list>
+    <!--<ion-list>
       <ion-list-header>Questions {{room_datos.Preguntas[0].encuesta.id}}</ion-list-header>
       <!--<ion-item ngFor="let item of room_datos.Preguntas">
         <ion-label>{{item.encuesta}}</ion-label>
-      </ion-item>-->
-    </ion-list>
+      </ion-item>
+    </ion-list>-->
 
     <button ion-button (click)="startQuestion($event,room_datos.Preguntas,0)">Empezar</button>
     
