--- a/src/pages/createQuestion/createQuestion.html
+++ b/src/pages/createQuestion/createQuestion.html
@@ -1,13 +1,13 @@
 <ion-header>
   <ion-navbar>
     <button bottom right>Cancel</button>
-    <ion-title>NewRoom</ion-title>
+    <ion-title>NewQuestion</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
     <form>
-        <ion-label>Title of Room</ion-label>
+        <ion-label>Question</ion-label>
         <ion-input type="text"></ion-input>
         <ion-label>Description</ion-label>
         <ion-textarea type="text"name="descripcion"></ion-textarea>
