--- a/src/pages/question_checkbox/question.html
+++ b/src/pages/question_checkbox/question.html
@@ -27,7 +27,7 @@
                 <strong>{{preguntas[indice].encuesta.title}}</strong>
                 </ion-label>
             <ion-item>
-                <ion-textarea type="text" name="descripcion"></ion-textarea>
+                <ion-textarea type="text" name="descripcion" [(ngModel)]="input"></ion-textarea>
             </ion-item>
             
           </ion-list>
@@ -41,6 +41,79 @@
                <ion-radio color="dark" checked="false" (click)="onModelChange($event,item.texto)"></ion-radio>
             </ion-item>
          </ion-list>
+
+         <ion-list *ngIf="preguntas[indice].encuesta.tipo == 'select'">
+            <!--<ion-item *ngFor="let item of preguntas[indice].encuesta.respuesta">
+                <ion-label>{{item.texto}}</ion-label>
+                <ion-select [(ngModel)]="emociones[item]" (click)="onModelChange($event,item.texto)">
+                    <ion-option>Muy Poco/nada</ion-option>
+                    <ion-option>Algo</ion-option>
+                    <ion-option>Moderadamente</ion-option>
+                    <ion-option>Bastante</ion-option>
+                    <ion-option>Extramadamente</ion-option>
+                </ion-select>
+            </ion-item>-->
+            <ion-item>
+                <ion-label>Triste</ion-label>
+                <ion-select [(ngModel)]="emociones[0]" (click)="onModelChange($event,'triste')">
+                    <ion-option>Muy Poco y nada</ion-option>
+                    <ion-option>Algo</ion-option>
+                    <ion-option>Moderadamente</ion-option>
+                    <ion-option>Bastante</ion-option>
+                    <ion-option>Extramadamente</ion-option>
+                </ion-select>
+            </ion-item>
+            <ion-item>
+                <ion-label>Feliz y contento</ion-label>
+                <ion-select [(ngModel)]="emociones[1]" (click)="onModelChange($event,'contento')">
+                    <ion-option>Muy Poco nada</ion-option>
+                    <ion-option>Algo</ion-option>
+                    <ion-option>Moderadamente</ion-option>
+                    <ion-option>Bastante</ion-option>
+                    <ion-option>Extramadamente</ion-option>
+                </ion-select>
+            </ion-item>
+            <ion-item>
+                <ion-label>Abatido</ion-label>
+                <ion-select [(ngModel)]="emociones[2]" (click)="onModelChange($event,'abatido')">
+                    <ion-option>Muy Poco y nada</ion-option>
+                    <ion-option>Algo</ion-option>
+                    <ion-option>Moderadamente</ion-option>
+                    <ion-option>Bastante</ion-option>
+                    <ion-option>Extramadamente</ion-option>
+                </ion-select>
+            </ion-item>
+            <ion-item>
+                <ion-label>Activo</ion-label>
+                <ion-select [(ngModel)]="emociones[3]" (click)="onModelChange($event,'activo')">
+                    <ion-option>Muy Poco y nada</ion-option>
+                    <ion-option>Algo</ion-option>
+                    <ion-option>Moderadamente</ion-option>
+                    <ion-option>Bastante</ion-option>
+                    <ion-option>Extramadamente</ion-option>
+                </ion-select>
+            </ion-item>
+            <ion-item>
+                <ion-label>Miserable</ion-label>
+                <ion-select [(ngModel)]="emociones[4]" (click)="onModelChange($event,'miserable')">
+                    <ion-option>Muy Poco y nada</ion-option>
+                    <ion-option>Algo</ion-option>
+                    <ion-option>Moderadamente</ion-option>
+                    <ion-option>Bastante</ion-option>
+                    <ion-option>Extramadamente</ion-option>
+                </ion-select>
+            </ion-item>
+            <ion-item>
+                <ion-label>Alegre</ion-label>
+                <ion-select [(ngModel)]="emociones[5]" (click)="onModelChange($event,'alegre')">
+                    <ion-option>Muy Poco y nada</ion-option>
+                    <ion-option>Algo</ion-option>
+                    <ion-option>Moderadamente</ion-option>
+                    <ion-option>Bastante</ion-option>
+                    <ion-option>Extramadamente</ion-option>
+                </ion-select>
+            </ion-item>
+        </ion-list>
 
         <!--<table *ngIf="preguntas[indice].encuesta.tipo == 'radio'">
             <thead>{{preguntas[indice].encuesta.title}}</thead>
@@ -73,7 +146,7 @@
     Siguiente
     </button>
 
-    <button *ngIf="indice == preguntas.length-1" ion-item icon-right color="danger" (click)="nextQuestion($event)" >
+    <button *ngIf="indice == preguntas.length-1" ion-item icon-right color="danger" (click)="finishQuestion($event)" >
     Finalizar
     </button>
   
