--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,6 +18,8 @@
 	  </ion-item>
     <div padding>
 	    <button ion-button color="dark" class="submit-btn"  block (click)="login()">Login</button>
+      <ion-label (click)="passwordReset()">Forgot login detail?<b>Get Help</b></ion-label>
+      <ion-label>OR</ion-label>
       <ion-label block (click)="register()">New Account</ion-label>
     </div>
 </form>
