--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -37,18 +37,13 @@
         </ion-item>
      </ion-list>
 
-     <ion-card>
-      <ion-card-header>
-        Bar Chart
-      </ion-card-header>
-      <ion-card-content>
-        <canvas #barCanvas></canvas>
-      </ion-card-content>
-    </ion-card>
- 
+ <ion-list>
+        <ion-list-header>
+            <strong>Statistics of Players</strong>
+        </ion-list-header>
     <ion-card>
       <ion-card-header>
-        Doughnut Chart
+        User gender
       </ion-card-header>
       <ion-card-content>
         <canvas #doughnutCanvas></canvas>
@@ -57,11 +52,13 @@
  
     <ion-card>
       <ion-card-header>
-        Line Chart
+        Number of answers
       </ion-card-header>
       <ion-card-content>
         <canvas #lineCanvas></canvas>
       </ion-card-content>
     </ion-card>
+
+ </ion-list>
 
 </ion-content>
