--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -20,7 +20,7 @@
         <ion-item>
             <ion-row>
                 <ion-col>
-                    <strong>WenTis: 2</strong>
+                    <strong>WenTis: {{roomNumber}}</strong>
                 </ion-col>
                 <ion-col>
                     <strong>Players: 2</strong>
